--- a/index.html
+++ b/index.html
@@ -310,15 +310,15 @@
               </button>
             </div>
           </div>
-          <!-- <div class="details-container color-container">
+           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-03.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div> -->
-            <!-- <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Pizza Sales Analysis in SQL</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -328,11 +328,11 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/shaikhmatin202-dataanalyst/Pizza_Sales_SQL_Analysis'"
               >
                 Live Demo
               </button>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
