--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
            <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-03.png"
+                src="./assets/project-03.jpeg"
                 alt="Project 3"
                 class="project-img"
               />
